wt88047: Restart rild + netmgrd at the end of the boot
Attempt to fix broken data connection on netmgrd crash

BUGBASH-72

Change-Id: I8b16b55f5835d44121abf9df6cdf8f0018cc2d63
Signed-off-by: RahifM <faizel326@gmail.com>
Signed-off-by: Ayush Dubey <ayushdubey70@gmail.com>
Signed-off-by: karthikkm007 <jacksparrow941994@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -434,3 +434,9 @@ service wcnss-service /system/vendor/bin/wcnss_service
 service qcom-mem /system/vendor/bin/init.qcom.mem.sh
     disabled
     oneshot
+
+# This fixes broken data connection on netmgrd crash
+on property:sys.boot_completed=1
+    restart ril-daemon
+    restart ril-daemon2
+    restart netmgrd
